[metadata]
name = pygconsole
version = attr: pygconsole.__VERSION__
author = devfred78
author_email = devfred78@gmail.com
description = ANSI terminal emulation for Pygame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devfred78/pygconsole
project_urls = 
	Bug Tracker = https://github.com/devfred78/pygconsole/issues
	Sources = https://github.com/devfred78/pygconsole
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Terminals

[options]
package_dir =
	pygconsole = pygconsole
packages = pygconsole
install_requires =
	pygame >= 2.1.0
	colorlog >= 6.4.1
python_requires = >= 3.8

[options.packages.find]
where = pygconsole
include = pygconsole

[options.package_data]
pygconsole = resources/fonts/DejaVu/*
